# picura

./: .env.example  CLAUDE.md  DEPLOY.md  README.md  conftest.py  deploy.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
assets/css/: backoffice.css  public.css
assets/css/backoffice/: tokens.css
assets/css/base/: tokens.css  typography.css
assets/css/blocks/: button.css  card.css  icon-button.css
assets/css/compositions/: cluster.css  halves.css  media-object.css  repel.css  with-sidebar.css
assets/css/public/: tokens.css
assets/js/: audio-player.js  audio-player.test.js  public.js
assets/js/alpine/: photo-nav.js
curio/: settings.py  urls.py
curio/backoffice/: forms.py  tests.py  urls.py  views.py
curio/core/templates/: _curio_logo.html  _footer.html  _header.html
curio/photos/: admin.py  apps.py  models.py  tests.py  use_cases.py
curio/photos/extraction/: __init__.py  test_exif.py  test_iptc.py
curio/photos/migrations/: 0001_initial.py
curio/resources/: admin.py  models.py  tests.py  urls.py  use_cases.py  views.py
curio/resources/extraction/: __init__.py  exif.py  iptc.py  test_exif.py  test_iptc.py
curio/resources/migrations/: 0001_initial.py  0002_resource_media_type.py  0003_resource_page_count_alter_resource_resource_type.py  0004_resource_description.py
locale/de/LC_MESSAGES/: django.po
picura/: asgi.py  settings.py  urls.py  wsgi.py
picura/albums/: admin.py  apps.py  models.py  urls.py  views.py
picura/albums/migrations/: 0001_initial.py  0002_add_status_and_published_at.py  0002_remove_albumphoto_unique_album_position_and_more.py
picura/albums/tests/: test_add_photo.py  test_date_label.py  test_photo_at.py  test_photo_navigation.py  test_position_integrity.py  test_primary_photo.py  test_public_views.py  test_publication.py  test_remove_photo.py  test_set_primary.py
picura/backoffice/: apps.py  decorators.py  forms.py  tests.py  urls.py  views.py
picura/backoffice/tests/: conftest.py  test_access_control.py  test_albums.py  test_batches.py  test_dashboard.py  test_photos.py
picura/core/: apps.py  context_processors.py  geocoding.py  tests.py  views.py
picura/my_account/: apps.py
picura/photos/: admin.py  apps.py  models.py  tests.py  urls.py  use_cases.py  views.py
(+89 files in other folders)
