[project]
name = "picura"
version = "0.1.0"
description = "Picura media library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-allauth~=65.17.0",
    "django-imagekit>=6.1.0",
    "django-vite>=3.1.0",
    "mutagen>=1.47.0",
    "pillow>=12.2.0",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "picura.settings"
python_files = ["tests.py", "test_*.py"]

[tool.djlint]
profile = "django"
indent = 2

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "pytest-django>=4.12.0",
]
