[project]
name = "picura"
version = "0.1.0"
description = "Self-hosted photo and media library"
readme = "README.md"
authors = [{name = "Marc Altmann", email = "marcaltmann@posteo.de"}]
license = "AGPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-allauth~=65.17.0",
    "django-imagekit>=6.1.0",
    "django-vite>=3.1.0",
    "mutagen>=1.47.0",
    "pillow>=12.2.0",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/marcaltmann/picura"
Repository = "https://github.com/marcaltmann/picura"

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "picura.settings"
python_files = ["tests.py", "test_*.py"]

[tool.djlint]
profile = "django"
indent = 2

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "pytest-django>=4.12.0",
]
